Increase temporarily the max perm size of child containers to work around some pending memory leaks.